Removed scrollbar from checkout

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,10 @@ body {
   background-color: white;
 }
 
+ion-content.checkout-content::part(scroll) {
+  @apply h-fit;
+}
+
 ion-searchbar {
   --box-shadow: none !important;
 }
